--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,7 @@
   Sample Go Web Application!!
       <div>
           <p class="greeting-id">The ID is </p>
-	 <p class="greeting-age">The age is </p>
+	      <p class="greeting-name">The name is </p>
           <p class="greeting-content">The content is </p>
 
       </div>
